# IPConnect

./: .gitignore  CMakeLists.txt  Doxyfile  IPConnect.pro  README.md  Using.md  client.cpp  client.h  clientmanager.cpp  clientmanager.h  connectdialog.cpp  connectdialog.h  connectdialog.ui  detaildialog.cpp  detaildialog.h  detaildialog.ui  downloadmanager.cpp  downloadmanager.h  filetransfer.cpp  filetransfer.h  main.cpp  messenger.cpp  messenger.h  messenger.ui
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  client.cpp  client.h  clientinformation.cpp  clientinformation.h  clientmanager.cpp  clientmanager.h  clientthreadmanager.cpp  clientthreadmanager.h  connection.cpp  connection.h  controlcenter.cpp  controlcenter.h  controlcenter_p.cpp  controlcenter_p.h  crypt.cpp  crypt.h  cryptengine.cpp  cryptengine.h  debug.cpp  debug.h  debugdownload.cpp  debugdownload.h  debugtransfer.cpp  debugtransfer.h  downloader.cpp  downloader.h  file.cpp  file.h  message.cpp  message.h  messageinformation.cpp  messageinformation.h  messageserver.cpp  messageserver.h  rsapair.cpp  rsapair.h  securetunnel.cpp  securetunnel.h  server.cpp  (+11 more)
src/lib/interfaces/: iclient.cpp  iclient.h  iclientmanager.cpp  iclientmanager.h  iconnection.cpp  iconnection.h  icontrolcenter.cpp  icontrolcenter.h  icryptengine.cpp  icryptengine.h  idownloader.cpp  idownloader.h  iserver.cpp  iserver.h  itransfer.cpp  itransfer.h  itransfermanager.cpp  itransfermanager.h  iusersettings.cpp  iusersettings.h
src/ui/: CMakeLists.txt  MainWindow.qml  ipconnectwindow.cpp  ipconnectwindow.h  messagelist.cpp  messagelist.h  messenger.cpp  messenger.h  pendingtransfers.cpp  pendingtransfers.h  runningtransfers.cpp  runningtransfers.h  uimanager.cpp  uimanager.h  userlist.cpp  userlist.h  window.qrc
src/ui/resources/: ActiveTransfer.qml  AppControls.qml  AppSettings.qml  FileTransfer.qml  IPCButton.qml  MainView.qml  MainWindow.qml  Messenger.qml  Notification.qml  PendingTransfer.qml  QuickConnect.qml  SideBar.qml  StatusBar.qml  TitleBar.qml  TransferManager.qml  Welcome.qml
